--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,10 +2,107 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import gzip\n",
+    "import time\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "def read_file(name = '/home/nishantsinha15/Documents/sem7/Natural Language Processing/Project/Review-Summarization/reviews_Electronics_5.json.gz'):\n",
+    "    dataset = []\n",
+    "    start_timer()\n",
+    "    data = gzip.open(name, 'r')\n",
+    "    for unit in data:\n",
+    "        dataset.append(eval(unit))\n",
+    "    print(\"Data read successfully\")\n",
+    "    end_timer()\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data read successfully\nTime Taken =  83.3583927154541\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = read_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_timer():\n",
+    "    global start_time\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "\n",
+    "def end_timer():\n",
+    "    print(\"Time Taken = \", time.time() - start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'reviewerID': 'AMO214LNFCEI4', 'asin': '0528881469', 'reviewerName': 'Amazon Customer', 'helpful': [12, 15], 'reviewText': 'I\\'m a professional OTR truck driver, and I bought a TND 700 at a truck stop hoping to make my life easier.  Rand McNally, are you listening?First thing I did after charging it was connect it to my laptop and install the software and then attempt to update it.  The software detected a problem with my update and wanted my home address so I could be sent a patch on an SD card.  Hello?  I don\\'t think I\\'m all that unusual; my home address is a PO box that a friend checks weekly and that I might get to check every six months or so.  I live in my truck and at truck stops.  If you need to make a patch available on an SD card then you should send the SD cards to the truck stops where the devices are sold.  I ran the update program multiple times until the program said that the TND 700 was completely updated.I programmed in the height (13\\'6\"), the length (53\\') and the weight (80,000#) of my rig and told it that I preferred highways.  I was parked at a truck stop in the Cincinnati OH area.  My next pickup was about 15 miles down the same freeway but on the other side of it a couple of blocks.  My cell phone GPS (Sprint) said to get on the freeway to get to my pickup.  The TND 700 routed me thru 23 miles of residential streets before finally getting me to my pickup.  Very exciting, especially since every time I refused to turn down a street posted \"No Trucks\" the TND 700 took almost 5 minutes to figure a re-route, and it happened multiple times on that short trip.I decided to give it another chance.  After my pickup on the north side of Cincinnati just off of I-75 I needed to head to Phoenix AZ via I-71.  Easy route is to just hop on I-75 and drive west and south to the intersection of I-71.  Indeed, that is what my cell phone advised.  The TND 700, however, wanted to route me over surface streets across the city and pick up I-75 on the other side of the city.  I turned it off and the next time I passed a truck stop of the same chain I purchased it at I returned it and got my money back.I then spent $30 on a cheap printer.  Now I take a minute to set up my route on Google and print it out.  Hasn\\'t gotten me lost yet over several cross country trips.', 'overall': 1.0, 'summary': 'Very Disappointed', 'unixReviewTime': 1290643200, 'reviewTime': '11 25, 2010'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataset[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_data_ratings(dataset):\n",
+    "    a = [[] for i in range(6)]\n",
+    "    start_timer()\n",
+    "    for unit in dataset:\n",
+    "        a[int(unit['overall'])].append(unit['reviewText'])\n",
+    "    end_timer()\n",
+    "    for i in a:\n",
+    "        print(\"Length of \", i, \"th = \", len(i))\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = get_data_ratings(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
